some fixes to the secondary page theme

--- a/www/features/basicPlayer.html
+++ b/www/features/basicPlayer.html
@@ -14,14 +14,14 @@
     
   </head>
   <body>
-  <div data-role="page">
-  	<div data-role="header" data-add-back-btn="true">
+  <div data-role="page" class="type-home" data-theme="b">
+  	<div data-role="header" data-add-back-btn="true" data-theme="b">
   	
   	<a href="../index.html" data-add-back-btn="true">Back</a>
 		<h1>Basic Player</h1>
 	</div>
 	
-	<p>Highlights basic html5 player </p> 
+	<ul><li>Highlights basic html5 player</li></ul> 
   	<div id="myVideoTarget" style="width:400px;height:330px;">
 </div>
 <script>
