--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
         });
     </script>
   </head>
-  <body onload="onBodyLoad()">
+  <body>
   <div data-role="page" class="type-home">
 	<div data-role="content">
 		<div class="content-secondary">
