--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
 					<li data-role="list-divider">HTML5</li>
 					<li><a href="features/basicPlayer.html">Basic Player</a></li>
 					<li><a href="http://cdnakmi.kaltura.org/apis/html5versions/1.6.5/modules/KalturaSupport/tests/PlaylistVertical.html">Playlist UiConf UI</a></li>
-					<li><a href="docs/buttons/index.html">Playlist Mobile UI</a></li>
+					<li><a href="features/playlistMobileUi.html">Playlist Mobile UI</a></li>
 					<li><a href="docs/content/index.html">KModerate</a></li>
 					
 					<li data-role="list-divider">iOS Features</li>
