--- a/www/features/basicPlayer.html
+++ b/www/features/basicPlayer.html
@@ -12,16 +12,9 @@
     <link rel="stylesheet" href="../lib/jquery/jquery.mobile.min.css" />
     <script src="http://cdnbakmi.kaltura.com/html5/html5lib/v1.6.6/mwEmbedLoader.php"><</script>
     
-    <script>
-        $( document ).bind( "mobileinit", function() {
-            // Make your jQuery Mobile framework configuration changes here!
-            $.mobile.allowCrossDomainPages = true;
-            $.mobile.page.addBackBtn = true;
-        });
-    </script>
   </head>
   <body>
-  <div data-role="page" class="type-home" data-theme="b">
+  <div id="basicPlayer" data-role="page" class="type-home" data-theme="b">
   	<div data-role="header" data-add-back-btn="true" data-theme="b">
   	
   	<a href="../index.html" data-add-back-btn="true">Back</a>
@@ -29,21 +22,7 @@
 	</div>
 	
 	<ul><li>Highlights basic html5 player</li></ul> 
-  	<div id="myVideoTarget" style="width:400px;height:330px;">
-</div>
-<script>
-	kWidget.embed({
-		'targetId': 'myVideoTarget',
-		'wid': '_243342',
-		'uiconf_id' : '2877502',
-		'entry_id' : '0_uka1msg4',
-		'readyCallback': function( playerId ){
-			console.log( "kWidget player ready: " + playerId );
-			var kdp = $('#' + playerId ).get(0);
-			//kdp.addJsListener( 'doPlay', 'doPlayCallback');
-		}
-	});
-</script>
-</div>
+  	<div id="myVideoTarget" style="width:400px;height:330px;"></div>
+   </div>
   </body>
 </html>
